Front page HTML now generated from a template

--- a/match/templates/home.html
+++ b/match/templates/home.html
@@ -1,3 +1,11 @@
 <html>
-    <title>EDU-Match</title>
+    <head>
+        <title>EDU-Match</title>
+    </head>
+    <body>
+        <h1>Enter Your Subject</h1>
+        <input id="id_new_subject" placeholder="Enter a Subject"/>
+        <table id="id_list_table">
+        </table>
+    </body>
 </html>
