--- a/match/templates/home.html
+++ b/match/templates/home.html
@@ -1,22 +1,30 @@
-<html>
-    <head>
-        <title>EDU-Match</title>
-    </head>
-    <body>
-        <h1>Enter Your Subject</h1>
+
+<head>
+    <title>EDU-MATCH</title>
+</head>
+<body>
+        <h1>EDU-Match</h1>
+        <br>
+        <table><form action="{% url 'match:profile' %}">
+
+         <button type="submit">My profile</button>
+      </form>
+        <form action="{% url 'match:home' %}">
+
+         <button type="submit">Matching</button>
+      </form></table>
+
+        <h2>Matching</h2>
+        <br>
         <form method="POST">
         <input name="item_subject" id="id_new_subject" placeholder="Enter a Subject" />
         {% csrf_token %}
+            <input type="submit" value="Search">
         </form>
-        {% if User %}
+
         <table id="id_list_table">
-            {% for new_subject in User.subject.all %}
-                <tr><td>{{ forloop.counter }} : {{ new_subject }}</td></tr>
-            {% endfor %}
-
+            <tr><td>{{ new_subject }}</td></tr>
         </table>
-
-        {% endif %}
     </body>
 </html>
 
