functional test : Add subject test

--- a/match/templates/home.html
+++ b/match/templates/home.html
@@ -7,7 +7,7 @@
         <br>
         <table><form action="{% url 'match:profile' %}">
 
-         <button type="submit">My profile</button>
+         <button id="id_to_profile" type="submit">My profile</button>
       </form>
         <form action="{% url 'match:home' %}">
 
