--- a/match/templates/home.html
+++ b/match/templates/home.html
@@ -1,30 +1,30 @@
+{% extends 'base.html' %}
 
-<head>
-    <title>EDU-MATCH</title>
-</head>
-<body>
-        <h1>EDU-Match</h1>
+{% block title %}EDU-MATCH{% endblock %}
+
+{% block content %}
+    <h2>Welcome to My Site, Visitor !!!</h2>
+    <p>
+        <strong>Total users registered </strong> {{ count }}
+    </p>
+    <table><form action="{% url 'match:profile' %}">
+        <button id="id_to_profile" type="submit">My profile</button>
+    </form>
+    <form action="{% url 'match:home' %}">
+        <button type="submit">Matching</button>
+    </form></table>
+
+    <h2>Matching</h2>
+    <br>
+    <form method="POST">
+    <input name="item_subject" id="id_new_subject" placeholder="Enter a Subject" />
+    {% csrf_token %}
+        <input type="submit" value="Search">
+    </form>
+
+    <table id="id_list_table">
         <br>
-        <table><form action="{% url 'match:profile' %}">
-
-         <button id="id_to_profile" type="submit">My profile</button>
-      </form>
-        <form action="{% url 'match:home' %}">
-
-         <button type="submit">Matching</button>
-      </form></table>
-
-        <h2>Matching</h2>
-        <br>
-        <form method="POST">
-        <input name="item_subject" id="id_new_subject" placeholder="Enter a Subject" />
-        {% csrf_token %}
-            <input type="submit" value="Search">
-        </form>
-
-        <table id="id_list_table">
-            <tr><td>{{ new_subject }}</td></tr>
-        </table>
-    </body>
-</html>
+        <tr><td>{{ new_subject }}</td></tr>
+    </table>
+{% endblock %}
 
