--- a/match/templates/base.html
+++ b/match/templates/base.html
@@ -7,6 +7,7 @@
     <h1>EDU-Match</h1>
     <a href="{% url 'match:home' %}">Home</a> /
     <a href="{% url 'match:signup' %}">Sign Up</a> /
+    <a href="{% url 'match:login' %}">Log in</a> /
     <hr>
     {% block content %}
     {% endblock %}
