--- a/match/templates/base.html
+++ b/match/templates/base.html
@@ -7,6 +7,8 @@
     <h1>EDU-Match</h1>
     <a href="{% url 'match:home' %}">Home</a> /
     {% if user.is_authenticated %}
+    <a href="/profile/{{ user.pk }}">Profile</a> /
+    <a href="{% url 'match:profile_add_subject' %}">Add Subject</a> /
     <a href="{% url 'match:logout' %}">Log Out</a> /
     <strong>You are Logged in as {{ user.username }}</strong>
     {% else %}
