--- a/match/templates/base.html
+++ b/match/templates/base.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>{% block title %}{% endblock %}</title>
-</head>
-<body>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <h1>EDU-Match</h1>
-    <a href="{% url 'match:home' %}">Home</a> /
-    {% if user.is_authenticated %}
-    <a id="id_profile" href="/profile/{{ user.pk }}">Profile</a> /
-    <a href="{% url 'match:profile_add_subject' %}">Add Subject</a> /
-    <a href="{% url 'match:friendmatched' %}">Friend matched</a> /
-    <a href="{% url 'match:request_match' %}"> {% if wantmatchcount %} <span class="badge badge-pill badge-danger">{{ wantmatchcount }}</span> {% endif %} Request to matching</a> /
-    <a href="{% url 'match:logout' %}">Log Out</a> /
-    <strong>You are Logged in as {{ user.username }}</strong>
-    {% else %}
-    <a href="{% url 'match:signup' %}">Sign Up</a> /
-    <a href="{% url 'match:login' %}">Log in</a> /
-    {% endif %}
+ <header>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="{% url 'match:home' %}">Edu-match</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+            <a class="nav-link" href="{% url 'match:home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" id="id_profile" href="/profile/{{ user.pk }}">Profile</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{% url 'match:profile_add_subject' %}">Add Subject</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{% url 'match:friendmatched' %}">Friend matched</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{% url 'match:request_match' %}"> {% if wantmatchcount %} <span class="badge badge-pill badge-danger">{{ wantmatchcount }}</span> {% endif %} Request to matching</a>
+            </li>
+            </ul>
+            <a class="nav-link disabled" href="#">You are Logged in as {{ user.username }}</a>
+            <a class="btn btn-outline-danger my-2 my-sm-0" href="{% url 'match:logout' %}">Log Out</a>
+            {% else %}
+            <li class="nav-item">
+            <a class="nav-link" href="{% url 'match:home' %}">Home</a>
+            </li>
+            </ul>
+            <a class="btn btn-outline-success  mr-sm-1" href="{% url 'match:login' %}">Log in</a>
+            <a class="btn btn-outline-warning  my-sm-0" href="{% url 'match:signup' %}">Sign Up</a>
+            {% endif %}
+        </div>
+      </nav>
+    </header>
+<body>
+    <br>
+    <br>
     <hr>
     {% block content %}
     {% endblock %}
