--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <textarea id="chat-log" cols="100" rows="20">{{ old_message }}</textarea><br/>
+
     <input id="chat-message-input" type="text" size="100"/><br/>
 
     <input id="chat-message-submit" type="button" value="Send"/>
@@ -21,7 +22,8 @@
     chatSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
         var message = data['message'];
-        document.querySelector('#chat-log').value += (message + '\n');
+        if(message.includes('{{user.username}}') ){document.querySelector('#chat-log').value += ('\t\t\t\t\t\t\t\t\t'+message + '\n');}
+        else{document.querySelector('#chat-log').value += (message + '\n');}
     };
 
     chatSocket.onclose = function(e) {
@@ -44,5 +46,6 @@
 
         messageInputDom.value = '';
     };
+
 </script>
 </html>
