--- a/match/templates/other_profile.html
+++ b/match/templates/other_profile.html
@@ -12,11 +12,11 @@
         <p>Email address     : {{ email }} </p>
         {{ count }}
         {% if checked %}
-        <button type="button" class="btn btn-outline-danger btn-sm " onclick="location.href='{% url 'match:unmatching' username   %}'"> unmatching </button>
+        <button type="button" class="btn btn-outline-danger btn-sm " onclick="location.href='{% url 'unmatching' username   %}'"> unmatching </button>
         {% else %}
-        <button type="button" class="btn btn-outline-success btn-sm" onclick="location.href='{% url 'match:matching' username   %}'"> matching </button>
+        <button type="button" class="btn btn-outline-success btn-sm" onclick="location.href='{% url 'matching' username   %}'"> matching </button>
         {% endif %}
         <br><br>
-        <a href="{% url 'match:home' %}">Back</a>
+        <a href="{% url 'home' %}">Back</a>
     </form>
 {% endblock content %}
