--- a/match/templates/registration/change_password_done.html
+++ b/match/templates/registration/change_password_done.html
@@ -3,5 +3,5 @@
 {% block content %}
 <h2>Change password</h2>
 <p style="color:green;">Password changed with success!!!</p>
-<p>You may now <a href="{% url 'match:logout' %}?next=/accounts/login"> Logout</a> and Login again</p>
+<p>You may now <a href="{% url 'logout' %}?next=/accounts/login"> Logout</a> and Login again</p>
 {% endblock %}
