--- a/match/templates/Friend_matched.html
+++ b/match/templates/Friend_matched.html
@@ -12,7 +12,7 @@
 {% if allmatched %}
         <table id="id_list_matching">
             {% for matched in allmatched %}
-            <tr><td>{{ forloop.counter }}: {{ matched }}          <button type="button" class="btn btn-outline-primary btn-sm" onclick="location.href='{% url 'match:friendprofile' matched   %}'"> Profile </button>  <br></td></tr>
+            <tr><td>{{ forloop.counter }}: {{ matched }}          <button type="button" class="btn btn-outline-primary btn-sm" onclick="location.href='{% url 'friendprofile' matched   %}'"> Profile </button>  <br></td></tr>
             {% endfor %}
         </table>
 {% elif Nomatched %}
