--- a/match/templates/base.html
+++ b/match/templates/base.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
  <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="{% url 'match:home' %}">Edu-match</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Edu-match</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,33 +11,33 @@
           <ul class="navbar-nav mr-auto">
             {% if user.is_authenticated %}
             <li class="nav-item">
-            <a class="nav-link" href="{% url 'match:home' %}">Home</a>
+            <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" id="id_profile" href="/profile/{{ user.pk }}">Profile</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="{% url 'match:profile_add_subject' %}">Add Subject</a>
+            <a class="nav-link" href="{% url 'profile_add_subject' %}">Add Subject</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="{% url 'match:friendmatched' %}">Friend matched</a>
+            <a class="nav-link" href="{% url 'friendmatched' %}">Friend matched</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="{% url 'match:request_match' %}"> {% if wantmatchcount %} <span class="badge badge-pill badge-danger">{{ wantmatchcount }}</span> {% endif %} Request to matching</a>
+            <a class="nav-link" href="{% url 'request_match' %}"> {% if wantmatchcount %} <span class="badge badge-pill badge-danger">{{ wantmatchcount }}</span> {% endif %} Request to matching</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="/accounts/change_password">Change Password</a>
             </li>
             </ul>
             <a class="nav-link disabled" href="#">You are Logged in as {{ user.first_name }}</a>
-            <a class="btn btn-outline-danger my-2 my-sm-0" href="{% url 'match:logout' %}">Log Out</a>
+            <a class="btn btn-outline-danger my-2 my-sm-0" href="{% url 'logout' %}">Log Out</a>
             {% else %}
             <li class="nav-item">
-            <a class="nav-link" href="{% url 'match:home' %}">Home</a>
+            <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             </ul>
-            <a class="btn btn-outline-success  mr-sm-1" href="{% url 'match:login' %}">Log in</a>
-            <a class="btn btn-outline-warning  my-sm-0" href="{% url 'match:signup' %}">Sign Up</a>
+            <a class="btn btn-outline-success  mr-sm-1" href="{% url 'login' %}">Log in</a>
+            <a class="btn btn-outline-warning  my-sm-0" href="{% url 'signup' %}">Sign Up</a>
             {% endif %}
         </div>
       </nav>
