--- a/match/templates/recievematch.html
+++ b/match/templates/recievematch.html
@@ -12,7 +12,7 @@
 {% if allwantmatch %}
         <table id="id_list_matching">
             {% for wantmatch in allwantmatch %}
-            <tr><td>{{ forloop.counter }}: {{ wantmatch }}          <button type="button" class="btn btn-outline-primary btn-sm" onclick="location.href='{% url 'match:view_profile_R' wantmatch   %}'"> Profile </button>  <br></td></tr>
+            <tr><td>{{ forloop.counter }}: {{ wantmatch }}          <button type="button" class="btn btn-outline-primary btn-sm" onclick="location.href='{% url 'view_profile_R' wantmatch   %}'"> Profile </button>  <br></td></tr>
             {% endfor %}
         </table>
 {% elif Nosent %}
