--- a/match/templates/home.html
+++ b/match/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h2>Welcome to My Site, {% if user.is_authenticated %}Hello {{ user.first_name }}{% else %}Visitor{% endif %} !</h2>
+    <h2>Welcome to EDU-Match, {% if user.is_authenticated %}Hello {{ user.first_name }}{% else %}Visitor{% endif %} !</h2>
     <p>
         <strong>Total users registered </strong> {{ count }}
     </p>
