--- a/match/templates/registration/login.html
+++ b/match/templates/registration/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
     <h2>Log in</h2>
     <form method="post">
