--- a/match/templates/registration/login.html
+++ b/match/templates/registration/login.html
@@ -4,10 +4,11 @@
 
 {% block content %}
     <h2>Log in</h2>
-    <form method="post">
+    <form method="POST" class="form-group">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit">Log in</button>
+        <button type="submit" class="btn btn-success">Log in</button>
         <a href="{% url 'password_reset' %}">Forgot your password?</a>
+
     </form>
 {% endblock %}
