--- a/match/templates/registration/profile.html
+++ b/match/templates/registration/profile.html
@@ -1,12 +1,27 @@
+<!DOCTYPE html>
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block title %}Profile{% endblock title %}
 
-{% block content %} 
-    <h2>Profile</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Update</button>
-    </form>
+{% block content %}
+    <div class="content-section">
+        <div class="media">
+            {% if user.profile.image.url == "" %}
+            <img class="rounded-circle account-img" src='/media/default.png' width="250" height="250"  hspace="20">
+            {% else %}
+            <img class="rounded-circle account-img" src='{{ user.profile.image.url }}' width="250" height="250"  hspace="20">
+            {% endif %}
+        <div class="media-body">
+            <h2 class="account-heading">Name : {{ user.first_name }} {{ user.last_name }}</h2>
+            <p class="text-secondary">E-mail : {{ user.email }}</p>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form_class|crispy }}
+                {{ p_form|crispy }}
+                <button type="submit">Update</button>
+            </form>
+        </div>
+        </div>
+    </div>
+
 {% endblock content %}
