--- a/match/templates/add_subject.html
+++ b/match/templates/add_subject.html
@@ -4,11 +4,11 @@
 
 {% block content %}
 <html>
-        <h2>Add Subject</h2>
+        <h2>Add expert subject</h2>
         <h3>Name : {{ user.first_name }}  {{ user.last_name }}</h3>
         <p>Username : {{ user.username }} </p>
        <table>
-               <p>My favorite subject :</p>
+               <p>My expert subject :</p>
            <form action="{% url 'add_subject' %}" method="post">
             <input name="item_subject" id="id_new_subject" placeholder="Enter a favorite Subject" />
             </ul><button type="submit" value="Submit"> Add </button>
