--- a/match/templates/home.html
+++ b/match/templates/home.html
@@ -9,7 +9,7 @@
         <strong>Total users registered </strong> {{ count }}
     </p>
 
-    <h2>Matching</h2>
+    <h2>Type your bad subject</h2>
     <br>
     <form action="{% url 'search' %}" method="post">
     <input name="item_subject2" id="id_new_subject" placeholder="Enter a Subject" />
@@ -19,15 +19,15 @@
 <br>
     {% if Noresult %}
        {{ Noresult }}
-       {% endif %}
-{% if usermatched %}
+    {% endif %}
+    {% if usertutorstu%}
 <table id="id_list_matching2">
-            {% for matched in usermatched %}
-            <tr><td> -  {{ matched }}          <button type="button" class="btn btn-outline-warning btn-sm" onclick="location.href='{% url 'friendprofile' matched   %}'"> Profile </button> <br></td></tr>
+            {% for tutor in usertutorstu %}
+            <tr><td> -  {{ tutor }}          <button type="button" class="btn btn-outline-warning btn-sm" onclick="location.href='{% url 'friendprofile' tutor   %}'"> Profile </button> <br></td></tr>
             {% endfor %}
-        </table>
 
-        {% endif %}
+
+    {% endif %}
     {% if userins %}
         <table id="id_list_matching">
 
@@ -35,7 +35,6 @@
             <tr><td> -  {{ human }}          <button type="button" class="btn btn-outline-primary btn-sm" onclick="location.href='{% url 'view_profile' human   %}'"> Profile </button> <br></td></tr>
             {% endfor %}
         </table>
-
-        {% endif %}
+    {% endif %}
 {% endblock %}
 
