--- a/match/templates/other_profile.html
+++ b/match/templates/other_profile.html
@@ -25,7 +25,7 @@
 {% if usercomall %}
 {% for review in usercomall %}
 {% csrf_token %}
-    <tr><td> - {{ review.realname }} : {{ review.message }}             </td></tr>
+    <tr><td> - {{ review.realname }} : {{ review.message }}        {% if review.realname == user.username %} <button type="button" class="btn btn-outline-danger btn-sm" onclick="location.href='{% url 'delete_review' username   %}'"> &#x274C </button> {% endif %}   <br></td></tr>
 {% endfor %}
 {% endif %}
 {% if Nocomment %}
