add rating.css and star rateing function

--- a/match/templates/base.html
+++ b/match/templates/base.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/rating.css' %}">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
     <title>{% block title %}{% endblock %}</title>
 </head>
 
