--- a/match/templates/other_profile.html
+++ b/match/templates/other_profile.html
@@ -2,7 +2,9 @@
 
 {% block title %}Profile{% endblock title %}
 
-{% block content %} 
+{% block content %}
+
+
     <h2>{{ username }}'s profile</h2>
     <form method="post">
         {% csrf_token %}
@@ -20,21 +22,43 @@
         <a href="{% url 'home' %}">Back</a>
     </form>
 <br><br>
-<h3>Review</h3>
+<h3 class="font-weight-bold">Review</h3>
 <br>
 {% if usercomall %}
 {% for review in usercomall %}
 {% csrf_token %}
-    <tr><td> - {{ review.realname }} : {{ review.message }}        {% if review.realname == user.username %} <button type="button" class="btn btn-outline-danger btn-sm" onclick="location.href='{% url 'delete_review' username   %}'"> &#x274C </button> {% endif %}   <br></td></tr>
+<tr><td> - <b>{{ review.realname }}</b> : Rate {{review.star}}  {% if review.realname == user.username %} <button type="button" class="btn btn-outline-danger btn-sm" onclick="location.href='{% url 'delete_review' username   %}'"> &#x274C </button> {% endif %} <br> {{ review.message }}   <br></td></tr>
 {% endfor %}
 {% endif %}
 {% if Nocomment %}
 {{ Nocomment }}
 {% endif %}
+
+
+
 <br><br>
+
+        <div class="comments" style="padding: 10px;">
+            <h4 class="font-weight-bold"> Leave a review </h4><br>
+            <p class="font-weight-bold">Name : {{ user.username }}</p>
+
+            <p class="font-weight-bold"> message*</p>
 <form action="{% url 'write_review' username %}" method="post">{% csrf_token %}
-    <input name="item_review" id="id_review" placeholder="Write your Comment Here" />
+    <input name="item_review" id="id_review" placeholder="Write Your Message Here" />
+    <div class="rating">
+    <input type="radio" name="star" value="5" id="star1"><label for="star1">
+</label>
+    <input type="radio" name="star" value="4" id="star2"><label for="star2">
+</label>
+    <input type="radio" name="star" value="3" id="star3"><label for="star3">
+</label>
+    <input type="radio" name="star" value="2" id="star4"><label for="star4">
+</label>
+    <input type="radio" name="star" value="1" id="star5"><label for="star5">
+</label>
+</div>
     <button type="submit" class="btn btn-secondary btn-sm"> Enter </button>
 </form>
+</div>
 <br>
 {% endblock content %}
