--- a/match/templates/other_profile.html
+++ b/match/templates/other_profile.html
@@ -15,8 +15,10 @@
         {{ count }}
         {% if checked %}
         <button type="button" class="btn btn-outline-danger btn-sm " onclick="location.href='{% url 'unmatching' username   %}'"> unmatching </button>
+        <button type="button" class="btn btn-outline-warning btn-sm" onclick="location.href='{% url 'room' id   %}'"> chat </button>
         {% else %}
         <button type="button" class="btn btn-outline-success btn-sm" onclick="location.href='{% url 'matching' username   %}'"> matching </button>
+        <button type="button" class="btn btn-outline-warning btn-sm" onclick="location.href='{% url 'room' id   %}'"> chat </button>
         {% endif %}
         <br><br>
         <a href="{% url 'home' %}">Back</a>
