--- a/match/templates/base.html
+++ b/match/templates/base.html
@@ -7,7 +7,14 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
     <title>{% block title %}{% endblock %}</title>
 </head>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.checked {
+  color: #ffff00;
+  font-size: 20px;
+  text-shadow: 0 2px 5px rgba(0,0,0,0.5);
+}
+</style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
  <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
