--- a/match/templates/other_profile.html
+++ b/match/templates/other_profile.html
@@ -53,7 +53,46 @@
 {% if usercomall %}
 {% for review in usercomall %}
 {% csrf_token %}
-<tr><td> - <b>{{ review.realname }}</b> : Rate {{review.star}} <br> {{ review.message }}   <br></td></tr>
+<tr><td> - <b>{{ review.realname }}</b> :
+    {% if review.star == 0 %}
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>{% endif %}
+    {% if review.star == 1 %}
+
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>{% endif %}
+    {% if review.star == 2 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>{% endif %}
+    {% if review.star == 3 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>{% endif %}
+    {% if review.star == 4 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>{% endif %}
+    {% if review.star == 5 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>{% endif %}
+
+    <br> {{ review.message }}   <br></td></tr>
 {% endfor %}
 {% endif %}
 {% if Nocomment %}
