--- a/match/templates/base.html
+++ b/match/templates/base.html
@@ -9,6 +9,10 @@
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+.normal{
+font-size: 20px;
+    color: #101010;
+}
 .checked {
   color: #ffff00;
   font-size: 20px;
