--- a/match/templates/other_profile.html
+++ b/match/templates/other_profile.html
@@ -24,15 +24,21 @@
         <a href="{% url 'home' %}">Back</a>
     </form>
 <br><br>
+
+<div class="container">
+  <div class="row">
+      <div class="comments" style="padding: 10px;">
+          <div class="card-body">
 <h3 class="font-weight-bold">Review</h3>
 <br>
 <div class="comments" style="padding: 10px;">
             <h4 class="font-weight-bold"> Leave a review </h4><br>
             <p class="font-weight-bold">Name : {{ user.username }}</p>
+    <p class="font-weight-bold">Rating :</p>
 
-            <p class="font-weight-bold"> message*</p>
+            <p class="font-weight-bold"> Message*</p>
 <form action="{% url 'write_review' username %}" method="post">{% csrf_token %}
-    <input name="item_review" id="id_review" placeholder="Write Your Message Here" />
+    <textarea rows="4" cols="50" name="item_review" id="id_review" placeholder="Write Your Message Here" ></textarea>
     <div class="rating">
     <input type="radio" name="star" value="5" id="star1"><label for="star1">
 </label>
@@ -45,46 +51,60 @@
     <input type="radio" name="star" value="1" id="star5"><label for="star5">
 </label>
 </div>
-    <button type="submit" class="btn btn-secondary btn-sm"> Enter </button>
+
+    <br>
+   {% if nomessage %} {{nomessage}}<br>{% endif %}
+    <button type="submit" class="btn btn-secondary btn-sm btn-block"> Review </button>
 </form>
-    {% if nomessage %} {{nomessage}}{% endif %}
+
+
+    </div>
+    </div>
+    </div>
+    </div>
 </div>
-<br>
+
 {% if usercomall %}
 {% for review in usercomall %}
 {% csrf_token %}
-<tr><td> - <b>{{ review.realname }}</b> :
+
+<tr><td> <div class="container">
+
+  <div class="row">
+      <div class="comments" style="padding: 10px;">
+          <div class="card-body">
+          - <b>{{ review.realname }}</b> :
     {% if review.star == 0 %}
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>{% endif %}
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
     {% if review.star == 1 %}
 
 <span class="fa fa-star checked"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>{% endif %}
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
     {% if review.star == 2 %}
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>{% endif %}
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
     {% if review.star == 3 %}
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>{% endif %}
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
     {% if review.star == 4 %}
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
-<span class="fa fa-star"></span>{% endif %}
+<span class="fa fa-star normal"></span>{% endif %}
     {% if review.star == 5 %}
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
@@ -92,7 +112,12 @@
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>{% endif %}
 
-    <br> {{ review.message }}   <br></td></tr>
+    <br> {{ review.message }}   <br>
+</div>
+    </div>
+  </div>
+    </div>
+</td></tr>
 {% endfor %}
 {% endif %}
 {% if Nocomment %}
