--- a/match/templates/recieve_profile.html
+++ b/match/templates/recieve_profile.html
@@ -15,7 +15,7 @@
             <p>Last  name : {{ lastname }} </p>
             <p>Email address     : {{ email }} </p>
             {{ count }}
-            <button type="button" class="btn btn-outline-success btn-sm" onclick="location.href='{% url 'acceptM' username   %}'"> Accept </button> <button type="button" class="btn btn-outline-danger btn-sm" onclick="location.href='{% url 'declineM' username   %}'"> Decline </button>
+            <button type="button" class="btn btn-outline-success btn-sm" onclick="location.href='{% url 'acceptM' username   %}'"> Accept </button> <button type="button" class="btn btn-outline-danger btn-sm" onclick="location.href='{% url 'declineM' username   %}'"> Decline </button> <button type="button" class="btn btn-outline-warning btn-sm" onclick="location.href='{% url 'room' id  %}'"> chat </button>
             <br><br>
             <a href="{% url 'request_match' %}">Back</a>
             </div>
